# TodoList

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: django.yml
static/css/: style.css
static/js/: script.js
staticfiles/css/: style.css
staticfiles/js/: script.js
tasks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tasks/templates/: base.html
tasks/templates/tasks/: about.html  addlist.html  addtask.html  alllist.html  alltask.html  index.html  updatelist.html  updatetask.html  viewlist.html  viewtask.html
todolist/: settings.py  settingss.py  urls.py  wsgi.py
