[project]
name = "to-do-list"
version = "0.1.0"
description = "A Web based Todo/Task Manager Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.10.0",
]
